--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ env:
     - LARAVEL_VERSION="5.6.*"
 
 before_script:
+  - sudo apt-get install zlib1g-dev libxml2 libxml2-dev libcurl4-openssl-dev pkg-config libssl-dev
+  - pecl install mongodb
   - composer install
   - composer require --no-update "laravel/laravel:${LARAVEL_VERSION}"
 
