--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
         "mockery/mockery": "~1.0",
         "nunomaduro/collision": "~2.0",
         "phpunit/phpunit": "~7.0",
-        "symfony/thanks": "^1.0"
+        "symfony/thanks": "^1.0",
+        "squizlabs/php_codesniffer": "3.2.*",
+        "phpmd/phpmd": "2.6.*",
+        "sebastian/phpcpd": "4.0.*"
     },
     "autoload": {
         "classmap": [
