--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,20 @@ matrix:
 env:
     - LARAVEL_VERSION="5.6.*"
 
+addons:
+  apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+      - mysql-server
+      - mysql-client
+
 before_script:
+  - mysql -e 'CREATE DATABASE blog;'
+  - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('password') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
+  - sudo mysql_upgrade
+  - sudo service mysql restart
+
   - sudo apt-get install zlib1g-dev libxml2 libxml2-dev libcurl4-openssl-dev pkg-config libssl-dev
   - pecl install mongodb
   - composer install
