--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ matrix:
 env:
     - LARAVEL_VERSION="5.6.*"
 
+services:
+  - mongodb
+
 addons:
   apt:
     sources:
@@ -18,10 +21,11 @@ addons:
       - mysql-client
 
 before_script:
-  - mysql -e 'CREATE DATABASE blog;'
-  - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('password') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
-  - sudo mysql_upgrade
+  - mysql -e 'CREATE DATABASE blog CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;'
+  - sudo mysql -e "GRANT ALL PRIVILEGES ON *.* TO 'blog'@'localhost' IDENTIFIED BY 'password';"
   - sudo service mysql restart
+
+  - mongo blog --eval 'db.createUser({user:"mongo",pwd:"password",roles:["readWrite"]});'
 
   - sudo apt-get install zlib1g-dev libxml2 libxml2-dev libcurl4-openssl-dev pkg-config libssl-dev
   - pecl install mongodb
