--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ addons:
 before_script:
   - mysql -e 'CREATE DATABASE blog CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;'
   - sudo mysql -e "GRANT ALL PRIVILEGES ON *.* TO 'blog'@'localhost' IDENTIFIED BY 'password';"
+  - sudo mysql_upgrade
   - sudo service mysql restart
 
   - mongo blog --eval 'db.createUser({user:"mongo",pwd:"password",roles:["readWrite"]});'
