--- a/.travis.yml
+++ b/.travis.yml
@@ -1,43 +1,21 @@
+sudo: required
+
 language: php
 
-php:
-  - 7.2
+services:
+  - docker
 
 matrix:
     fast_finish: false
 
-env:
-    - LARAVEL_VERSION="5.6.*"
-
-services:
-  - mongodb
-
-addons:
-  apt:
-    sources:
-      - mysql-5.7-trusty
-    packages:
-      - mysql-server
-      - mysql-client
-
 before_script:
-  - mysql -e 'CREATE DATABASE blog CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;'
-  - sudo mysql -e "GRANT ALL PRIVILEGES ON *.* TO 'blog'@'localhost' IDENTIFIED BY 'password';"
-  - sudo mysql_upgrade
-  - sudo service mysql restart
-
-  - mongo blog --eval 'db.createUser({user:"mongo",pwd:"password",roles:["readWrite"]});'
-
-  - sudo apt-get install zlib1g-dev libxml2 libxml2-dev libcurl4-openssl-dev pkg-config libssl-dev
-  - pecl install mongodb
-  - composer install
-  - composer require --no-update "laravel/laravel:${LARAVEL_VERSION}"
+  - docker-compose up -d
 
 script:
-  - cp .env.example .env
-  - php artisan key:generate
-  - php artisan migrate --seed
-  - vendor/bin/phpcs --extensions=php --standard=PSR2 app tests
-  - vendor/bin/phpmd app tests text codesize,unusedcode,naming
-  - vendor/bin/phpcpd app
-  - vendor/bin/phpunit --no-coverage
+  - docker-compose exec -T php-fpm .env.example .env
+  - docker-compose exec -T php-fpm php artisan key:generate
+  - docker-compose exec -T php-fpm php artisan migrate --seed
+  - docker-compose exec -T php-fpm vendor/bin/phpcs --extensions=php --standard=PSR2 app tests
+  - docker-compose exec -T php-fpm vendor/bin/phpmd app tests text codesize,unusedcode,naming
+  - docker-compose exec -T php-fpm vendor/bin/phpcpd app
+  - docker-compose exec -T php-fpm vendor/bin/phpunit --no-coverage
