PHP was updated to 7.3. Blog post list was moved to vue.js. Added preloader for post list. Added ziggy package to publish routes from laravel to vue.js.

--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,10 +1,10 @@
-FROM php:7.2-fpm
+FROM php:7.3-fpm
 
 RUN apt-get update \
 	&& apt-get install -y git nodejs zlib1g-dev libxml2 libxml2-dev libcurl4-openssl-dev pkg-config libssl-dev\
+    && apt-get install -y libmcrypt-dev libreadline-dev libzip-dev\
+    && docker-php-ext-install -j$(nproc) zip bcmath calendar fileinfo gettext iconv json mbstring pcntl pdo \
+    pdo_mysql mysqli soap tokenizer zip \
     && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
-	&& apt-get install -y libmcrypt-dev libreadline-dev \
-	&& docker-php-ext-install -j$(nproc) bcmath calendar fileinfo gettext iconv json mbstring pcntl pdo \
-	pdo_mysql mysqli soap tokenizer zip \
 	&& pecl install mongodb \
     && docker-php-ext-enable mongodb
