--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3'
 services:
     php-fpm:
         build: ./docker/php-fpm
-        image: php:7.1-fpm
         volumes:
             - ./:/var/www/html
     nginx:
@@ -11,12 +10,11 @@ services:
             - php-fpm
         volumes:
             - ./:/var/www/html
-            - ./storage/nginx-logs:/var/log/nginx
             - ./docker/nginx/vhost/vhost.conf:/etc/nginx/conf.d/default.conf
         ports:
             - "80:80"
     yarn:
-        image: kkarczmarczyk/node-yarn:latest
+        image: node:latest
         links: 
             - php-fpm
         volumes:
