--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "lubbe/blog",
+    "description": "Simple blog with Laravel and Vue.js",
+    "keywords": ["lubbe", "blog"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=7.1.3",
         "fideloper/proxy": "~4.0",
-        "jenssegers/mongodb": "^3.4",
-        "laravel/framework": "5.6.*",
+        "jenssegers/mongodb": "^3.5",
+        "laravel/framework": "5.8.*",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
@@ -19,9 +19,11 @@
         "nunomaduro/collision": "~2.0",
         "phpunit/phpunit": "~7.0",
         "symfony/thanks": "^1.0",
-        "squizlabs/php_codesniffer": "3.2.*",
+        "squizlabs/php_codesniffer": "3.4.*",
         "phpmd/phpmd": "2.6.*",
-        "sebastian/phpcpd": "4.0.*"
+        "sebastian/phpcpd": "4.0.*",
+        "roave/security-advisories": "dev-master",
+        "tightenco/ziggy": "0.6.*"
     },
     "autoload": {
         "classmap": [
